path and schema injection
